
Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with
email address.

2008-Feb-4 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
    specctra_export.cpp now supports blind/buried/microvias. Fixed how modules
    are displayed on back of board. Added a circle keepout for each copper-less
    through hole.
    

2008-Feb-3 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
  * specctra_export.cpp was not exporting the nets correctly, now fixed.  
  * Had a problem with an isolated pad modification on a single module instance 
    in the context of several unmodified instances of same module, now fixed.  
  * Fixed oval pads to make freerouting.net happy.  
    See: http://www.freerouting.net/usren/viewtopic.php?f=3&t=317#p408
    Done with specctra export for now, will think about adding controls (by dialog)
    on the export later.
  * Beautification of a few modules.  
    

2008-Jan-31 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew:
    remove the old EDGEZONE class.
    A ZONE_CONTAINER class is used instead to handle the creation of a new zone outline
    

2008-Jan-29 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew:
    SPECCTRA export does most items now, except existing tracks.  Soon will
    need testing.


2008-Jan-28 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew:
    - Better criteria to find starting poind in zone filling: the filling alg. uses
    pads, vias and track ends to find where start the filling.