@@ -95,9 +95,10 @@ enum main_id {
     ID_GEN_EXPORT_SPECCTRA,
 	ID_GEN_EXPORT_FILE_GENCADFORMAT,
 	ID_GEN_EXPORT_FILE_MODULE_REPORT,
-	ID_GEN_EXPORT_FILE_FORMAT_2,		// Not used
-	ID_GEN_EXPORT_FILE_FORMAT_3,		// Not used
-	ID_GEN_EXPORT_FILE_FORMAT_4,		// Not used
+    
+	ID_GEN_IMPORT_FILE,
+    ID_GEN_IMPORT_SPECCTRA_SESSION,
+	ID_GEN_IMPORT_SPECCTRA_DESIGN,
 
 	ID_EXIT,
 	ID_OPTIONS_SETUP,
