@@ -1,0 +1,50 @@
+/*
+ * This program source code file is part of KICAD, a free EDA CAD application.
+ *
+ * Copyright (C) 2007-2008 SoftPLC Corporation, Dick Hollenbeck <dick@softplc.com>
+ * Copyright (C) 2007 Kicad Developers, see change_log.txt for contributors.
+ * 
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * as published by the Free Software Foundation; either version 2
+ * of the License, or (at your option) any later version.
+ * 
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ * 
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, you may find one here:
+ * http://www.gnu.org/licenses/old-licenses/gpl-2.0.html 
+ * or you may search the http://www.gnu.org website for the version 2 license, 
+ * or you may write to the Free Software Foundation, Inc., 
+ * 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA
+ */
+
+ 
+/*  This source is a complement to specctra.cpp and implements the import of
+    a specctra session file (*.ses), and import of a specctra design file 
+    (*.dsn) file.  The specification for the grammar of the specctra dsn file 
+    used to develop this code is given here:
+    http://www.autotraxeda.com/docs/SPECCTRA/SPECCTRA.pdf
+        
+    Also see the comments at the top of the specctra.cpp file itself.
+*/
+
+
+#include "specctra.h"
+
+
+using namespace DSN;
+
+void WinEDA_PcbFrame::ImportSpecctraDesign( wxCommandEvent& event )
+{
+}
+
+
+void WinEDA_PcbFrame::ImportSpecctraSession( wxCommandEvent& event )
+{
+}
+
+
